# node-uni-ocr

./: Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: lib.rs
