
[package]
authors = ["ENFP-Dev-Studio <contact@enfpdev.com>"]
edition = "2021"
name = "node-uni-ocr"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha", features = ["async"] }
napi-derive = "3.0.0-alpha"
uni-ocr     = "0.1.5"
image       = "0.25.6"
# futures     = "0.3.31"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1